fixed alignment issue with fiedset

--- a/htmlcss/230323 Assignment/assets/style.css
+++ b/htmlcss/230323 Assignment/assets/style.css
@@ -203,7 +203,7 @@ footer {
     flex-flow: nowrap column;
     justify-content: center;
     top:0;
-    right: 0;
+    right: 50px;
     height: 100%;
     max-width: 400px;
 }
